Changed line 47 from "<img class="reference-art" src="../../../img/ref/IlyinishnaMakarovnaObraztsovaSluchevskaya.png" alt="エリサベトのレファレンス">" to <img class="reference-art" src="../../../img/ref/Ilyinishna_Makarovna_Obraztsova-Sluchevskaya.png" alt="イリニシュナのレファレンス"> (corrected line 46 as well)

--- a/html/gallery/nizi/IlyinishnaMakarovnaObraztsova.html
+++ b/html/gallery/nizi/IlyinishnaMakarovnaObraztsova.html
@@ -43,8 +43,8 @@
       <section class="gallery" id="現在レファレンス">
         <h2 class="art-heading">レファレンス</h2><hr>
         <div class="flex-gallery" id="Flexbox 【レファレンス】">
-          <div class="art-ref" id="エリサベトのレファレンス">
-            <img class="reference-art" src="../../../img/ref/IlyinishnaMakarovnaObraztsovaSluchevskaya.png" alt="エリサベトのレファレンス">
+          <div class="art-ref" id="イリニシュナのレファレンス">
+            <img class="reference-art" src="../../../img/ref/Ilyinishna_Makarovna_Obraztsova-Sluchevskaya.png" alt="イリニシュナのレファレンス">
           </div>
         </div>
       </section>
