Changed line 47 from "<img class="reference-art" src="../../../img/ref/MaengSongHee.png" alt="聖姫のレファレンス">" to "<img class="reference-art" src="../../../img/ref/Maeng_Song-Hee.png" alt="聖姫のレファレンス">"

--- a/html/gallery/nizi/MaengSongHee.html
+++ b/html/gallery/nizi/MaengSongHee.html
@@ -44,7 +44,7 @@
         <h2 class="art-heading">レファレンス</h2><hr>
         <div class="flex-gallery" id="Flexbox 【レファレンス】">
           <div class="art-ref" id="聖姫のレファレンス">
-            <img class="reference-art" src="../../../img/ref/MaengSongHee.png" alt="聖姫のレファレンス">
+            <img class="reference-art" src="../../../img/ref/Maeng_Song-Hee.png" alt="聖姫のレファレンス">
           </div>
         </div>
       </section>
