Corrected line 46 to "<div class="art-ref" id="ワーモのレファレンス">"

--- a/html/gallery/nizi/Wamo.html
+++ b/html/gallery/nizi/Wamo.html
@@ -43,7 +43,7 @@
       <section class="gallery" id="現在レファレンス">
         <h2 class="art-heading">レファレンス</h2><hr>
         <div class="flex-gallery" id="Flexbox 【レファレンス】">
-          <div class="art-ref" id="アニムスのレファレンス">
+          <div class="art-ref" id="ワーモのレファレンス">
             <img class="reference-art" src="../../../img/ref/Wamo.png" alt="ワーモのレファレンス">
           </div>
         </div>
