Changed file "html/gallery/nizi/Ayn.html" to "html/gallery/nizi/ʿAyn.html" and updated paths

--- a/html/nizi.html
+++ b/html/nizi.html
@@ -339,7 +339,7 @@
           </p>
           <p>アラビア文字に「<span lang="ar" dir="rtl" class="font-naskh">عَيْن</span>」を書く。ISO 233-2式に「<span lang="ar-Latn" class="font-latin">ʿAyn</span>」を書く。</p>
           <br>
-          <a href="./gallery/nizi/Ayn.html" title="美術館へ" target="topframe">美術館へ行きますか？</a>
+          <a href="./gallery/nizi/ʿAyn.html" title="美術館へ" target="topframe">美術館へ行きますか？</a>
           <br>
         </section>
         <!-- ボルルマー（Bolormaa｜Болормаа｜ᠪᠣᠯᠣᠷᠮᠠ｜｜Bolurma） -->
