Changed file "html/gallery/nizi/Cuowu.html" to "html/gallery/nizi/Cuòwù.html" and updated paths

--- a/html/nizi.html
+++ b/html/nizi.html
@@ -478,7 +478,7 @@
           </p>
           <p>※代名詞は「」である。ピンインに「<span lang="zh-Latn" class="font-latin">Bǎiwàn</span>」で書く。ウェード式に「<span lang="zh-Latn" class="font-latin">Pai<sup>3</sup>-wan<sup>4</sup></span>」で書く。国語ローマ字に「<span lang="zh-Latn" class="font-latin">Baewann</span>」で書く。繁体字に「<span lang="zh-Hant" class="font-tradhanzi">佰萬</span>」を書く。簡体字に「<span lang="zh-Hans" class="font-simphanzi">佰万</span>」で書く。</p>
           <br>
-          <a href="./gallery/nizi/Cuowu.html" title="美術館へ" target="topframe">美術館へ行きますか？</a>
+          <a href="./gallery/nizi/Cuòwù.html" title="美術館へ" target="topframe">美術館へ行きますか？</a>
           <br>
         </section>
         <!-- ハップ・Ｐ・エモ＝ション（Hap P. Emo-shun） -->
