Changed file "html/gallery/nizi/MaengSongHee.html" to "html/gallery/nizi/Maeng_Song-Hee.html", updated paths, and corrected some prides errors

--- a/html/nizi.html
+++ b/html/nizi.html
@@ -620,9 +620,9 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
-            <!-- アブロセクシャル（Abrosexual） -->
-            <a href="https://lgbtqia.fandom.com/wiki/Abrosexual" title="アブロセクシャル" target="_blank">
-              <img class="pride-flag" src="../img/pride/Abrosexual.png" alt="アブロセクシャル" title="アブロセクシャル（Abrosexual）">
+            <!-- Pride template / Pride flag placeholder :3 -->
+            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
             </a>
             <br>
           </div>
@@ -661,9 +661,9 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
-            <!-- アブロセクシャル（Abrosexual） -->
-            <a href="https://lgbtqia.fandom.com/wiki/Abrosexual" title="アブロセクシャル" target="_blank">
-              <img class="pride-flag" src="../img/pride/Abrosexual.png" alt="アブロセクシャル" title="アブロセクシャル（Abrosexual）">
+            <!-- Pride template / Pride flag placeholder :3 -->
+            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
             </a>
             <br>
           </div>
@@ -693,7 +693,7 @@
           <p><ruby>郷鬼<rt>あたし</rt></ruby>の１人の式神である。</p>
           <p>※ハングルに「<span lang="ko" class="font-hangul">맹성희</span>」と<ruby>漢字<rt>ハンジャ</rt></ruby>に「<span lang="ko-Hani" class="font-hanja">孟聖姬</span>」で書く。</p>
           <br>
-          <a href="./gallery/nizi/MaengSongHee.html" title="美術館へ" target="topframe">美術館へ行きますか？</a>
+          <a href="./gallery/nizi/Maeng_Song-Hee.html" title="美術館へ" target="topframe">美術館へ行きますか？</a>
           <br>
         </section>
         <!-- ぬゑさか岸姫（Kishihime Nuwesaka） -->
