Added character art "Biblically Accurate Angel"

--- a/html/gallery/nizi/ʿAyn.html
+++ b/html/gallery/nizi/ʿAyn.html
@@ -52,6 +52,10 @@
       <section class="gallery" id="美術品">
         <h2 class="art-heading">美術品</h2><hr>
         <div class="flex-gallery" id="Flexbox 【美術品】">
+          <div class="art-gallery" id="Biblically Accurate Angel">
+            <img class="gallery-art" src="../../../img/gallery/ʿAyn/Biblically Accurate Angel.png" alt="Biblically Accurate Angel">
+            <p class="caption">Biblically Accurate Angel</p>
+          </div>
         </div>
       </section>
       <!-- 旧レファレンス（Old ref sheets :3） -->
