Added character art "'Ayn"

--- a/html/gallery/nizi/ʿAyn.html
+++ b/html/gallery/nizi/ʿAyn.html
@@ -56,6 +56,10 @@
             <img class="gallery-art" src="../../../img/gallery/ʿAyn/Biblically Accurate Angel.png" alt="Biblically Accurate Angel">
             <p class="caption">Biblically Accurate Angel</p>
           </div>
+          <div class="art-gallery" id="'Ayn">
+            <img class="gallery-art" src="../../../img/gallery/ʿAyn/'Ayn.png" alt="'Ayn">
+            <p class="caption">'Ayn</p>
+          </div>
         </div>
       </section>
       <!-- 旧レファレンス（Old ref sheets :3） -->
