Added character art "'Ayn Sprite"

--- a/html/gallery/nizi/ʿAyn.html
+++ b/html/gallery/nizi/ʿAyn.html
@@ -60,6 +60,10 @@
             <img class="gallery-art" src="../../../img/gallery/ʿAyn/'Ayn.png" alt="'Ayn">
             <p class="caption">'Ayn</p>
           </div>
+          <div class="art-gallery" id="'Ayn Sprite">
+            <img class="gallery-art" src="../../../img/gallery/ʿAyn/'Ayn Sprite.png" alt="'Ayn Sprite">
+            <p class="caption">'Ayn Sprite</p>
+          </div>
         </div>
       </section>
       <!-- 旧レファレンス（Old ref sheets :3） -->
