Added character art "Short or Long - Bolormaa (ᠪᠣᠯᠤᠷᠮᠠ)"

--- a/html/gallery/nizi/Bolormaa.html
+++ b/html/gallery/nizi/Bolormaa.html
@@ -52,6 +52,10 @@
       <section class="gallery" id="美術品">
         <h2 class="art-heading">美術品</h2><hr>
         <div class="flex-gallery" id="Flexbox 【美術品】">
+          <div class="art-gallery" id="Short or Long - Bolormaa (ᠪᠣᠯᠤᠷᠮᠠ)">
+            <img class="gallery-art" src="../../../img/gallery/Bolormaa/Short or Long - Bolormaa (ᠪᠣᠯᠤᠷᠮᠠ).png" alt="Short or Long - Bolormaa (ᠪᠣᠯᠤᠷᠮᠠ)">
+            <p class="caption">Short or Long - Bolormaa (<span lang="mn-Mong" class="font-mongolian text-mongolian">ᠪᠣᠯᠤᠷᠮᠠ</span>)</p>
+          </div>
         </div>
       </section>
       <!-- 旧レファレンス（Old ref sheets :3） -->
