--- a/html/gallery/nizi/Hap_P._Emo-shun.html
+++ b/html/gallery/nizi/Hap_P._Emo-shun.html
@@ -33,8 +33,8 @@
       <h1 class="header-text">
         天園神關里　～ Brilliance of Heaven Pleasure<br>
         美術館<br>
-        ハップ・Ｐ・エモ＝ション</h1>
-      </div>
+        ハップ・Ｐ・エモ＝ション
+      </h1>
     </header>
     <main>
       <!-- 造化神録に戻る（Return to the Record） -->
