--- a/html/gallery/nizi/Hap_P._Emo-shun.html
+++ b/html/gallery/nizi/Hap_P._Emo-shun.html
@@ -52,8 +52,8 @@
       <section class="gallery" id="美術品">
         <h2 class="art-heading">美術品</h2><hr>
         <div class="flex-gallery" id="Flexbox 【美術品】">
-          <div class="art-gallery" id="Emotions feat. Hap P. Emo-Shun">
-            <img class="gallery-art" src="../../../img/gallery/Hap_P._Emo-shun/Emotions feat. Hap P. Emo-Shun.png" alt="Emotions feat. Hap P. Emo-Shun">
+          <div class="art-gallery" id="Emotions_feat._Hap_P._Emo-Shun">
+            <img class="gallery-art" style="height: 192px" src="../../../img/gallery/Hap_P._Emo-shun/Emotions feat. Hap P. Emo-Shun.png" alt="Emotions feat. Hap P. Emo-Shun">
             <p class="caption">Emotions feat. Hap P. Emo-Shun</p>
           </div>
         </div>
