Corrected src attribute on line 502 from "../img/ハップ・Ｐ・エモ＝ション.png" to "../img/art/ハップ・Ｐ・エモ＝ション.png"

--- a/html/nizi.html
+++ b/html/nizi.html
@@ -499,7 +499,7 @@
             <br>
           </div>
           <div class="art-chara">
-            <img class="art" style="width: 192px" src="../img/ハップ・Ｐ・エモ＝ション.png" alt="ハップ">
+            <img class="art" style="width: 192px" src="../img/art/ハップ・Ｐ・エモ＝ション.png" alt="ハップ">
             <p class="caption">ハップ</p>
           </div>
           <p>感情を色に変わる神様</p>
