Added character art for Kishihime Nuwesaka

--- a/html/nizi.html
+++ b/html/nizi.html
@@ -709,7 +709,7 @@
             <br>
           </div>
           <div class="art-chara">
-            <img class="art" src="../img/fill.png" alt="岸姫">
+            <img class="art" src="../img/art/ぬゑさか岸姫.png" alt="岸姫">
             <p class="caption">岸姫</p>
           </div>
           <p>真型がない大魔書</p>
