Added character art "ぬゑさか岸姫（スク水）"

--- a/html/gallery/nizi/Kishihime_Nuwesaka.html
+++ b/html/gallery/nizi/Kishihime_Nuwesaka.html
@@ -52,6 +52,10 @@
       <section class="gallery" id="美術品">
         <h2 class="art-heading">美術品</h2><hr>
         <div class="flex-gallery" id="Flexbox 【美術品】">
+          <div class="art-gallery" id="ぬゑさか岸姫（スク水）">
+            <img class="gallery-art" src="../../../img/gallery/Kishihime_Nuwesaka/ぬゑさか岸姫（スク水）.png" alt="ぬゑさか岸姫（スク水）">
+            <p class="caption">ぬゑさか岸姫（スク水）</p>
+          </div>
         </div>
       </section>
       <!-- 旧レファレンス（Old ref sheets :3） -->
