Changed file "html/gallery/spalmea/ArendtCederstrom.html" to "html/gallery/spalmea/Arendt_Cederström.html" and updated paths

--- a/html/spalmea.html
+++ b/html/spalmea.html
@@ -82,7 +82,7 @@
           <p>家族：</p>
           <p>ハンナの夫であり、恵墨の養父である。</p>
           <br>
-          <a href="./gallery/spalmea/ArendtCederstrom.html" target="topframe">美術館へ行きますか？</a>
+          <a href="./gallery/spalmea/Arendt_Cederström.html" target="topframe">美術館へ行きますか？</a>
           <br>
         </section>
         <!-- 恵墨・クラーラー・セーデシュトレーム（Esumi Klara Cederström） -->
