Changed file "html/gallery/spalmea/EsumiKlaraCederstrom.html" to "html/gallery/spalmea/Esumi_Klara_Cederström.html" and updated paths

--- a/html/spalmea.html
+++ b/html/spalmea.html
@@ -128,7 +128,7 @@
           <p>家族：</p>
           <p>アレントとハンナのもらいＮＢのいい子である。</p>
           <br>
-          <a href="./gallery/spalmea/EsumiKlaraCederstrom.html" target="topframe">美術館へ行きますか？</a>
+          <a href="./gallery/spalmea/Esumi_Klara_Cederström.html" target="topframe">美術館へ行きますか？</a>
           <br>
         </section>
         <!-- ハンナ・セーデシュトレーム（Hanna Cederström） -->
