Changed file "html/gallery/spalmea/HannaCederstrom.html" to "html/gallery/spalmea/Hanna_Cederström.html" and updated paths

--- a/html/spalmea.html
+++ b/html/spalmea.html
@@ -173,7 +173,7 @@
           <p>家族：</p>
           <p>アレントの妻であり、恵墨の養母である。</p>
           <br>
-          <a href="./gallery/spalmea/HannaCederstrom.html" target="topframe">美術館へ行きますか？</a>
+          <a href="./gallery/spalmea/Hanna_Cederström.html" target="topframe">美術館へ行きますか？</a>
           <br>
         </section>
         <!-- ルカス・ダールストロム（Lucas Dahlström） -->
