Changed file "html/gallery/spalmea/LucasDahlstrom.html" to "html/gallery/spalmea/Lucas_Dahlström.html" and updated paths

--- a/html/spalmea.html
+++ b/html/spalmea.html
@@ -216,7 +216,7 @@
           </p>
           <p>家族：</p>
           <br>
-          <a href="./gallery/spalmea/LucasDahlstrom.html" target="topframe">美術館へ行きますか？</a>
+          <a href="./gallery/spalmea/Lucas_Dahlström.html" target="topframe">美術館へ行きますか？</a>
           <br>
         </section>
         <!-- ルーイズ・フォルスボリ（Louise Forsborg） -->
