--- a/html/spalmea.html
+++ b/html/spalmea.html
@@ -259,7 +259,7 @@
           </p>
           <p>家族：</p>
           <br>
-          <a href="./gallery/spalmea/LouiseForsborg.html" target="topframe">美術館へ行きますか？</a>
+          <a href="./gallery/spalmea/Louise_Forsborg.html" target="topframe">美術館へ行きますか？</a>
           <br>
         </section>
         <!-- ルット・ヨロンボリ（Rut Grönborg） -->
@@ -302,7 +302,7 @@
           </p>
           <p>家族：</p>
           <br>
-          <a href="./gallery/spalmea/RutGronborg.html" target="topframe">美術館へ行きますか？</a>
+          <a href="./gallery/spalmea/Rut_Grönborg.html" target="topframe">美術館へ行きますか？</a>
           <br>
         </section>
         <!-- ビートリス・ヘッグルンド（Beatrice Hägglund） -->
@@ -345,7 +345,7 @@
           </p>
           <p>家族：</p>
           <br>
-          <a href="./gallery/spalmea/BeatriceHagglund.html" target="topframe">美術館へ行きますか？</a>
+          <a href="./gallery/spalmea/Beatrice_Hägglund.html" target="topframe">美術館へ行きますか？</a>
           <br>
         </section>
         <!-- エミリエ・ハンマーストロム（Emilie Hammarström） -->
@@ -388,7 +388,7 @@
           </p>
           <p>家族：</p>
           <br>
-          <a href="./gallery/spalmea/EmilieHammarstrom.html" target="topframe">美術館へ行きますか？</a>
+          <a href="./gallery/spalmea/Emilie_Hammarström.html" target="topframe">美術館へ行きますか？</a>
           <br>
         </section>
         <!-- メリッサ・ヘルボリ（Melissa Hellborg） -->
@@ -431,7 +431,7 @@
           </p>
           <p>家族：</p>
           <br>
-          <a href="./gallery/spalmea/MelissaHellborg.html" target="topframe">美術館へ行きますか？</a>
+          <a href="./gallery/spalmea/Melissa_Hellborg.html" target="topframe">美術館へ行きますか？</a>
           <br>
         </section>
         <!-- ミラベラ・レンナートッソン（Mirabella Lennartsson） -->
@@ -474,7 +474,7 @@
           </p>
           <p>家族：</p>
           <br>
-          <a href="./gallery/spalmea/MirabellaLennartsson.html" target="topframe">美術館へ行きますか？</a>
+          <a href="./gallery/spalmea/Mirabella_Lennartsson.html" target="topframe">美術館へ行きますか？</a>
           <br>
         </section>
         <!-- アイメェ・リリェストロム（Aimée Liljeström） -->
@@ -517,7 +517,7 @@
           </p>
           <p>家族：</p>
           <br>
-          <a href="./gallery/spalmea/AimeeLiljestrom.html" target="topframe">美術館へ行きますか？</a>
+          <a href="./gallery/spalmea/Aimée_Liljeström.html" target="topframe">美術館へ行きますか？</a>
           <br>
         </section>
         <!-- ルシア・リュングボリ（Lucia Ljungborg） -->
@@ -560,7 +560,7 @@
           </p>
           <p>家族：</p>
           <br>
-          <a href="./gallery/spalmea/LuciaLjungborg.html" target="topframe">美術館へ行きますか？</a>
+          <a href="./gallery/spalmea/Lucia_Ljungborg.html" target="topframe">美術館へ行きますか？</a>
           <br>
         </section>
         <!-- ミャグマルスレンギーン・ツェルモゴイアヒラグチュ＝ココチュエレンゲリ（Myagmarsürengiin Tsölmogoiakhlagch-Kokochuebenggeri） -->
@@ -605,7 +605,7 @@
           <p>スコッゲド村の村長である。</p>
           <p>※キリル文字に「<span lang="mn" class="font-cyrillic">Мягмарсүрэнгийн Цөлмогойахлагч-Кокочуэбэнггэри</span>」を書く。モンゴル文字「<span lang="mn-Mong" class="font-mongolian text-mongolian">ᠮᠢᠶᠠᠭᠠᠮᠠᠷᠢᠰᠥᠷᠡᠩᠭᠢᠶᠢᠨ<br>ᠴᠥᠯᠥᠮᠣᠭᠣᠯᠠᠬᠠᠯᠠᠭᠠᠴ<br>ᠬᠣᠬᠣᠴᠣᠪᠡᠪᠡᠩᠭᠡᠷᠢ</span>」を書く。</p>
           <br>
-          <a href="./gallery/spalmea/Tsolko.html" target="topframe">美術館へ行きますか？</a>
+          <a href="./gallery/spalmea/Tsölko.html" target="topframe">美術館へ行きますか？</a>
           <br>
         </section>
         <!-- ダニエラ・ニストロム（Daniela Nyström） -->
@@ -648,7 +648,7 @@
           </p>
           <p>家族：</p>
           <br>
-          <a href="./gallery/spalmea/DanielaNystrom.html" target="topframe">美術館へ行きますか？</a>
+          <a href="./gallery/spalmea/Daniela_Nyström.html" target="topframe">美術館へ行きますか？</a>
           <br>
         </section>
         <!-- ソニャ・エストルンド（Sonja Östlund） -->
@@ -691,7 +691,7 @@
           </p>
           <p>家族：</p>
           <br>
-          <a href="./gallery/spalmea/SonjaOstlund.html" target="topframe">美術館へ行きますか？</a>
+          <a href="./gallery/spalmea/Sonja_Östlund.html" target="topframe">美術館へ行きますか？</a>
           <br>
         </section>
         <!-- キリエ・ウルグラニア・アルカディアス・スケーウォラ（Kyrie Urgulania Arcadius Scævola） -->
@@ -735,7 +735,7 @@
           <p>家族：</p>
           <p>スポルメーア民主共和国の大統領である。故郷はヘッスレルレフテオー村である。</p>
           <br>
-          <a href="./gallery/spalmea/KyrieScaevola.html" target="topframe">美術館へ行きますか？</a>
+          <a href="./gallery/spalmea/Kyrie_Urgulania_Arcadius_Scaevola.html" target="topframe">美術館へ行きますか？</a>
           <br>
         </section>
         <!-- ノラ・スィオグレン（Nora Sjögren） -->
@@ -778,7 +778,7 @@
           </p>
           <p>家族：</p>
           <br>
-          <a href="./gallery/spalmea/NoraSjogren.html" target="topframe">美術館へ行きますか？</a>
+          <a href="./gallery/spalmea/Nora_Sjögren.html" target="topframe">美術館へ行きますか？</a>
           <br>
         </section>
         <!-- マークス・スィオホルム（Marcus Sjöholm） -->
@@ -821,7 +821,7 @@
           </p>
           <p>家族：</p>
           <br>
-          <a href="./gallery/spalmea/MarcusSjoholm.html" target="topframe">美術館へ行きますか？</a>
+          <a href="./gallery/spalmea/Marcus_Sjöholm.html" target="topframe">美術館へ行きますか？</a>
           <br>
         </section>
         <!-- インゲゲルド・スカースゴールド（Ingegärd Skarsgård） -->
@@ -864,7 +864,7 @@
           </p>
           <p>家族：</p>
           <br>
-          <a href="./gallery/spalmea/IngegardSkarsgard.html" target="topframe">美術館へ行きますか？</a>
+          <a href="./gallery/spalmea/Ingegärd_Skarsgård.html" target="topframe">美術館へ行きますか？</a>
           <br>
         </section>
         <!-- ロセマリエ・ソダーボリ（Rosemarie Söderborg） -->
@@ -907,7 +907,7 @@
           </p>
           <p>家族：</p>
           <br>
-          <a href="./gallery/spalmea/RosemarieSoderborg.html" target="topframe">美術館へ行きますか？</a>
+          <a href="./gallery/spalmea/Rosemarie_Söderborg.html" target="topframe">美術館へ行きますか？</a>
           <br>
         </section>
         <!-- リンネェア・ソレンストラム（Linnéa Sörenstram） -->
@@ -950,7 +950,7 @@
           </p>
           <p>家族：</p>
           <br>
-          <a href="./gallery/spalmea/LinneaSorenstram.html" target="topframe">美術館へ行きますか？</a>
+          <a href="./gallery/spalmea/Linnéa_Sörenstram.html" target="topframe">美術館へ行きますか？</a>
           <br>
         </section>
         <!-- レベッカ・スンドボリ（Rebecka Sundborg） -->
@@ -993,7 +993,7 @@
           </p>
           <p>家族：</p>
           <br>
-          <a href="./gallery/spalmea/RebeckaSundborg.html" target="topframe">美術館へ行きますか？</a>
+          <a href="./gallery/spalmea/Rebecka_Sundborg.html" target="topframe">美術館へ行きますか？</a>
           <br>
         </section>
         <!-- イヴォン・スヴァールド（Yvonne Svärd） -->
@@ -1036,7 +1036,7 @@
           </p>
           <p>家族：</p>
           <br>
-          <a href="./gallery/spalmea/YvonneSvard.html" target="topframe">美術館へ行きますか？</a>
+          <a href="./gallery/spalmea/Yvonne_Svärd.html" target="topframe">美術館へ行きますか？</a>
           <br>
         </section>
         <!-- ヘレン・ウィクストロム（Helen Vikström） -->
@@ -1079,7 +1079,7 @@
           </p>
           <p>家族：</p>
           <br>
-          <a href="./gallery/spalmea/HelenVikstrom.html" target="topframe">美術館へ行きますか？</a>
+          <a href="./gallery/spalmea/Helen_Vikström.html" target="topframe">美術館へ行きますか？</a>
           <br>
         </section>
         <!-- イェスカ・ウィクストロム（Jesca Vikström） -->
@@ -1122,7 +1122,7 @@
           </p>
           <p>家族：</p>
           <br>
-          <a href="./gallery/spalmea/JescaVikstrom.html" target="topframe">美術館へ行きますか？</a>
+          <a href="./gallery/spalmea/Jesca_Vikström.html" target="topframe">美術館へ行きますか？</a>
           <br>
         </section>
         <!-- ヴィヴィアン・ヴァールベルク（Vivianne Wahlberg） -->
@@ -1165,7 +1165,7 @@
           </p>
           <p>家族：</p>
           <br>
-          <a href="./gallery/spalmea/VivianneWahlberg.html" target="topframe">美術館へ行きますか？</a>
+          <a href="./gallery/spalmea/Vivianne_Wahlberg.html" target="topframe">美術館へ行きますか？</a>
           <br>
         </section>
       </article>
@@ -1212,7 +1212,7 @@
           </p>
           <p>家族：</p>
           <br>
-          <a href="./gallery/spalmea/OliviaAxelsson.html" target="topframe">美術館へ行きますか？</a>
+          <a href="./gallery/spalmea/Olivia_Axelsson.html" target="topframe">美術館へ行きますか？</a>
           <br>
         </section>
       </article>
