Fixed Xuegang's pronouns

--- a/html/bingyan.html
+++ b/html/bingyan.html
@@ -1125,7 +1125,7 @@
           <h4 id="Sūn_Xuēgāng">孫薛剛</h4>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
-            <p class="pronouns">代名詞：zhe/zher/zhier</p>
+            <p class="pronouns">代名詞：zhe/cold</p>
             <!-- グレイシアン（Glacian） -->
             <a href="https://www.deviantart.com/pride-flags/art/Glacian-876950170" title="グレイシアン" target="_blank">
               <img class="pride-flag" src="../img/pride/xeno/Glacian.png" alt="グレイシアン" title="グレイシアン（Glacian）">
@@ -1148,7 +1148,7 @@
           <p>
             性別：♀<br>
             性自認：ゼノジェンダー・グレイシアン<br>
-            代名詞：<ruby>奴<rt>ジー</rt></ruby>／<ruby>奴<rt>ジェル</rt></ruby>／<ruby>奴<rt>ジェル</rt></ruby>（zhe/zher/zhier）<br>
+            代名詞：<ruby>奴<rt>ジー</rt></ruby>／<ruby>奴<rt>コルド</rt></ruby>（zhe/cold）<br>
             雌雄性：
           </p>
           <p>
