--- a/html/ancient.html
+++ b/html/ancient.html
@@ -40,7 +40,7 @@
       <h1 id="Ancient_Kansekiri">旧神關里</h1><hr>
       <!-- The Former Capital, Then & Now -->
       <article>
-        <h2>古い都の町人、古代と現代</h2>
+        <h2 id="The_Former_Capital_Then_and_Now">古い都の町人、古代と現代</h2>
         <!-- 柏嵜法牌香（Kashizaki no Hakaru no Fudakau） -->
         <section>
           <h4 id="Kashizaki_no_Hakaru_no_Fudakau">柏嵜法牌香</h4>
