Imported nizi.js

--- a/html/nizi.html
+++ b/html/nizi.html
@@ -27,6 +27,8 @@
     <title>造化神録　虹の造化者</title>
     <!-- The CSS stylesheet. -->
     <link rel="stylesheet" href="../css/default.css">
+    <!-- The JavaScript scripts -->
+    <script scr="../js/nizi.js"></script>
   </head>
   <body>
     <header>
